# quant-finance-research

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: options_dashboard.py
docs/superpowers/plans/: 2026-07-10-options-dashboard-functional-upgrade.md  2026-07-10-options-dashboard-polish.md  2026-07-10-options-dashboard-redesign.md  2026-07-10-options-dashboard-workstation-upgrade.md
docs/superpowers/specs/: 2026-07-10-options-dashboard-functional-upgrade-design.md  2026-07-10-options-dashboard-redesign-design.md  2026-07-10-options-dashboard-workstation-upgrade-design.md
notebooks/: barrier_options_learning_paper.ipynb  binomial_tree_learning_paper.ipynb  black_scholes_pricing_paper.ipynb  heston_model_learning_paper.ipynb
src/options_pricing_research/: __init__.py  binomial.py  black_scholes.py  dashboard.py  hedging.py  heston.py  monte_carlo.py  portfolio_lab.py  strategies.py
src/quant_factor_research/: __init__.py  __main__.py  backtest.py  cli.py  data.py  factors.py  metrics.py  portfolio.py
tests/: test_backtest.py  test_binomial.py  test_black_scholes.py  test_dashboard.py  test_factors.py  test_hedging.py  test_monte_carlo_models.py  test_options_dashboard_app.py  test_portfolio_lab.py  test_strategies.py
